# motion-man

./: Cargo.toml  README.md
src/: color.rs  element.rs  engine.rs  engine_message.rs  ffmpeg.rs  info.rs  lib.rs  main.rs  node.rs  rect.rs  scene.rs  signal.rs  tween.rs
src/gcx/: buffer.rs  mod.rs  shader.rs  texture.rs  vertex_array.rs
