[package]
name = "motion-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
after-drop = "1.0.1"
bitflags = "2.4.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
glow = "0.13.0"
glutin = "0.31.1"
glutin-winit = "0.4.2"
nohash-hasher = "0.2.0"
raw-window-handle = { version = "0.5.0", features = ["std"] }
rusty_ffmpeg = { version = "0.13.1", features = ["ffmpeg6", "link_system_ffmpeg"] }
tokio = { version = "1.34.0", features = ["rt", "sync"] }
winit = "0.29.3"
